--- a/demo/resize-container.html
+++ b/demo/resize-container.html
@@ -14,26 +14,23 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="css/normalize.min.css" />
     <link rel="stylesheet" href="css/layout.css" />
-    <link rel="stylesheet" href="js/jquery/awesomeResizer/css/awesome.resizer.css" />
+    <link rel="stylesheet" href="../src/awesome-resizer/css/awesome.resizer.css" />
 
   </head>
 
   <body>
-
-    <img src="images/test.jpg" alt="" />
-
+    <div class="container">
+      <img src="images/test.jpg" alt="" />
+    </div>
   </body>
 
-  <script src="js/jquery/jquery.min.js"></script>
-  <script src="js/jquery/jquery.easing.min.js"></script>
-  <script src="js/jquery/jquery.inview.min.js"></script>
-  <script src="js/jquery/jquery.placeholder.min.js"></script>
-  <script src="js/jquery/awesomeResizer/awesome.resizer.js"></script>
+  <script src="../src/jquery/jquery.min.js"></script>
+  <script src="../src/jquery/jquery.easing.min.js"></script>
+  <script src="../src/awesome-resizer/awesome.resizer.js"></script>
   <script>
     $('img').awesomeResizer({
-      'container' : $(window),
-      'stretch'   : true,
-      'fluid' : true
+      'container' : $('.container'),
+      'stretch'   : true
     });
   </script>
 </html>
