--- a/demo/resize-container.html
+++ b/demo/resize-container.html
@@ -29,8 +29,7 @@
   <script src="../src/awesome-resizer/awesome.resizer.js"></script>
   <script>
     $('img').awesomeResizer({
-      'container' : $('.container'),
-      'stretch'   : true
+      'container' : $('.container')
     });
   </script>
 </html>
