--- a/demo/resize-lazy-load.html
+++ b/demo/resize-lazy-load.html
@@ -16,14 +16,12 @@
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="../src/awesome-resizer/css/awesome.resizer.css" />
 
-    <style>
-      html,body{ height: 100%; }
-    </style>
-
   </head>
 
   <body>
-    <img src="images/test.jpg" alt="" />
+    <div class="container">
+      <img data-src="images/test.jpg" alt="" />
+    </div>
   </body>
 
   <script src="../src/jquery/jquery.min.js"></script>
@@ -31,8 +29,7 @@
   <script src="../src/awesome-resizer/awesome.resizer.js"></script>
   <script>
     $('img').awesomeResizer({
-      'stretch' : true,
-      'fluid'   : true
+      'container' : $('.container')
     });
   </script>
 </html>
