--- a/demo/resize-lazy-load.html
+++ b/demo/resize-lazy-load.html
@@ -26,7 +26,7 @@
 
   <script src="../src/jquery/jquery.min.js"></script>
   <script src="../src/jquery/jquery.easing.min.js"></script>
-  <script src="../src/awesome-resizer/awesome.resizer.js"></script>
+  <script src="../src/awesome-resizer/awesome.resizer.min.js"></script>
   <script>
     $('img').awesomeResizer({
       'container' : $('.container')
