--- a/demo/resize-simple.html
+++ b/demo/resize-simple.html
@@ -24,7 +24,7 @@
 
   <script src="../src/jquery/jquery.min.js"></script>
   <script src="../src/jquery/jquery.easing.min.js"></script>
-  <script src="../src/awesome-resizer/awesome.resizer.js"></script>
+  <script src="../src/awesome-resizer/awesome.resizer.min.js"></script>
   <script>
     $('img').awesomeResizer({
       'width'  : 500,
